# aoss-bedrock-workshop

./: .env.sample  .gitignore  1-index-and-document.ipynb  2-basic-search.ipynb  3-full-text-search-jp.ipynb  4-ai-search.ipynb  README.md  pyproject.toml
img/: architecture-with-bedrock.drawio  architecture.drawio
