[project]
name = "aoss-bedrock-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler[opensearch]>=3.12.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "opensearch-py<3",
    "python-dotenv>=1.1.1",
    "requests-aws4auth>=1.3.1",
    "tqdm>=4.67.1",
]
